fix image height overflow

--- a/new_rendu/css/main.css
+++ b/new_rendu/css/main.css
@@ -126,8 +126,12 @@
 
 .small_photo_div a {
   width: 24%;
+  display: block;
+  border-radius: 10px;
   float: left;
   padding: 0.5%;
+  height: 135px;
+  overflow: hidden;
 }
 
 .comment {
